fixed css for the modal menu, so that it covers full screen tinymce and removed debugger statements in js

--- a/askbot/skins/default/media/bootstrap/css/bootstrap.css
+++ b/askbot/skins/default/media/bootstrap/css/bootstrap.css
@@ -4551,3 +4551,9 @@ a.thumbnail:hover {
     width: 515px;
     margin-bottom: 0px;
 }
+.modal-backdrop {
+    z-index: 200000;
+}
+.modal {
+    z-index: 200001;
+}
